--- a/Notebooks/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
+++ b/Notebooks/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "my_unique_dataset_name = \"1155c2a891714097b099ade1fee4bddb\" # Replace with your dataset name used in the training notebook\n",
     "\n",
-    "model_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_model_best\"\n",
+    "model_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_model_best\" \n",
     "model_versions = ml_client.models.list(name=model_name)\n",
     "latest_model = max(model_versions, key=lambda x: x.version)\n",
     "latest_model.path"
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_test_data\"\n",
+    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_test_data\" # AML test Dataset name used in the training notebook\n",
     "data_asset_version = \"1.0\" # Replace with your dataset version used in the training notebook\n",
     "data_asset = ml_client.data.get(name=data_asset_name, version=data_asset_version)"
    ]
