--- a/Notebooks/automl_amlsdkv2_score_bestmodel_local.ipynb
+++ b/Notebooks/automl_amlsdkv2_score_bestmodel_local.ipynb
@@ -49,7 +49,7 @@
     "import joblib\n",
     "import os\n",
     "\n",
-    "model_path = os.path.join(\".././artifact_downloads/outputs\", \"mlflow-model\" ,\"model.pkl\")\n",
+    "model_path = os.path.join(\".././artifact_downloads/outputs\", \"mlflow-model\" ,\"model.pkl\") # Local path to model downloaded from the training notebook.\n",
     "model = joblib.load(model_path)"
    ]
   },
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "my_unique_dataset_name = \"1155c2a891714097b099ade1fee4bddb\" # Replace with your unique dataset name\n",
-    "my_unique_test_data_set_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_test/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv'"
+    "my_unique_test_data_set_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_test/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv' # Local path to test data created in the training notebook."
    ]
   },
   {
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "result = model.predict(test_data)"
+    "result = model.predict(test_data) # Use the model to predict the labels for the test data."
    ]
   },
   {
@@ -151,9 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data_orig[\"Churn_Prediction\"] = result\n",
+    "test_data_orig[\"Churn_Prediction\"] = result # Add the predicted labels to the test data.\n",
     "\n",
-    "test_data_orig['Churn_Prediction'] = test_data_orig['Churn_Prediction'].map({True: 'Yes', False: 'No'})\n"
+    "test_data_orig['Churn_Prediction'] = test_data_orig['Churn_Prediction'].map({True: 'Yes', False: 'No'}) # Map the predicted labels to \"Yes\" or \"No\".\n"
    ]
   },
   {
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "selected_columns = test_data_orig[['customerID', 'Churn', 'Churn_Prediction']]\n",
+    "selected_columns = test_data_orig[['customerID', 'Churn', 'Churn_Prediction']] # View actual vs predicted labels\n",
     "\n",
     "# Display the selected columns\n",
     "print(selected_columns)"
