--- a/Notebooks/automl_amlsdkv2_train_automl.ipynb
+++ b/Notebooks/automl_amlsdkv2_train_automl.ipynb
@@ -143,7 +143,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Load training data from CSV file\n",
-    "training_data = pd.read_csv('.././telcocustomerchurn/WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
+    "training_data = pd.read_csv('.././telcocustomerchurn/WA_Fn-UseC_-Telco-Customer-Churn.csv') # local path to training data CSV file\n",
     "\n",
     "# Separate the data into features (X) and labels (y)\n",
     "X = training_data.drop(columns=['Churn'])  # Assuming 'label' is the column containing class labels\n",
@@ -157,10 +157,10 @@
     "test_data = pd.concat([X_test, y_test], axis=1)\n",
     "\n",
     "# Save the generated test data to a new CSV file\n",
-    "test_data.to_csv(f'.././telcocustomerchurn/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv', index=False)\n",
+    "test_data.to_csv(f'.././telcocustomerchurn/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv', index=False) # local path to test data CSV file\n",
     "\n",
     "# Save the training data to a new CSV file\n",
-    "train_data.to_csv(f'.././telcocustomerchurn/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Train.csv', index=False)\n",
+    "train_data.to_csv(f'.././telcocustomerchurn/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Train.csv', index=False) # local path to training data CSV file\n",
     "\n"
    ]
   },
@@ -195,8 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_train/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Train.csv'\n",
-    "test_data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_test/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv'"
+    "train_data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_train/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Train.csv' # local path to training data CSV file\n",
+    "test_data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_test/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv' # local path to test data CSV file"
    ]
   },
   {
@@ -215,7 +215,7 @@
     "]\n",
     "\n",
     "train_table = mltable.from_delimited_files(train_data_paths)\n",
-    "train_table.save(f'.././telcocustomerchurn/{my_unique_dataset_name}_train')\n",
+    "train_table.save(f'.././telcocustomerchurn/{my_unique_dataset_name}_train') # local path to training data MLTable file\n",
     "# Save the training data to a new CSV file\n",
     "train_data.to_csv(train_data_paths[0]['file'], index=False)\n",
     "\n"
@@ -253,7 +253,7 @@
     "]\n",
     "\n",
     "\n",
-    "outdir = f'.././telcocustomerchurn/{my_unique_dataset_name}_test'\n",
+    "outdir = f'.././telcocustomerchurn/{my_unique_dataset_name}_test' # local path to test data CSV file\n",
     "if not os.path.exists(outdir):\n",
     "    os.mkdir(outdir)\n",
     "# Save the generated test data to a new CSV file\n",
@@ -310,9 +310,9 @@
     }
    ],
    "source": [
-    "data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_train'\n",
-    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_train_data\"\n",
-    "data_asset_version = \"1.0\"\n",
+    "data_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_train' # local path to training data CSV file\n",
+    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_train_data\" # AML Data Asset name\n",
+    "data_asset_version = \"1.0\" # AML Data Asset version. Need to update this if this notebook is run multiple times\n",
     "training_data_asset =create_dataset(data_path, data_asset_name, data_asset_version, AssetTypes.MLTABLE)"
    ]
   },
@@ -346,9 +346,9 @@
     }
    ],
    "source": [
-    "data_path = test_data_path\n",
-    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_test_data\"\n",
-    "data_asset_version = \"1.0\"\n",
+    "data_path = test_data_path # local path to test data CSV file\n",
+    "data_asset_name = f\"{my_unique_dataset_name}-wa_telco_customer_churn_test_data\" # AML Data Asset name\n",
+    "data_asset_version = \"1.0\" # AML Data Asset version. Need to update this if this notebook is run multiple times\n",
     "test_data_asset = create_dataset(data_path, data_asset_name, data_asset_version, AssetTypes.URI_FILE)\n"
    ]
   },
