--- a/Notebooks/automl_amlsdkv2_score_bestmodel_local.ipynb
+++ b/Notebooks/automl_amlsdkv2_score_bestmodel_local.ipynb
@@ -95,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_unique_dataset_name = \"1155c2a891714097b099ade1fee4bddb\" # Replace with your unique dataset name\n",
-    "my_unique_test_data_set_path = f'.././telcocustomerchurn/{my_unique_dataset_name}_test/{my_unique_dataset_name}-WA_Fn-UseC_-Telco-Customer-Churn_Test.csv' # Local path to test data created in the training notebook."
+    "my_unique_test_data_set_path = f'.././telcocustomerchurn/WA_Fn-UseC_-Telco-Customer-Churn_Test.csv' # Local path to test data created in the training notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,8 @@
     "test_data[\"Dependents\"] = test_data[\"Dependents\"].map({\"Yes\": True, \"No\": False})\n",
     "test_data[\"PhoneService\"] = test_data[\"PhoneService\"].map({\"Yes\": True, \"No\": False})\n",
     "test_data[\"PaperlessBilling\"] = test_data[\"PaperlessBilling\"].map({\"Yes\": True, \"No\": False})\n",
-    " \n"
+    "\n",
+    "test_data.to_csv(f'.././telcocustomerchurn/batch_scoring_test_data.csv', index=False) \n"
    ]
   },
   {
@@ -294,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
